little fix for word wrap

--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -1,1 +1,13 @@
-.common{border:1px solid #000;border-radius:5px;width:300px;margin:25px auto;padding:25px}.error{color:red}
+.common {
+    border: 1px solid #000;
+    border-radius: 5px;
+    width: 300px;
+    margin: 25px auto;
+    padding: 25px;
+    word-wrap: break-word
+}
+
+.error {
+    color: red
+}
+
